--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -19,9 +19,12 @@
 	.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
 	  opacity: 0;
 	}
+	.listinfo {
+	  list-style: none;
+	}
 </style>
 	<div id="managerInfo">
-		<div style="padding: 10px;background: #f8f8f9">
+		<div style="padding: 20px;background: #f8f8f9">
 	 	<transition name="fade">
 	     	<i-button type="info" @click="creatNew" v-if="isCreat">添加数据</i-button>
 		    <div v-else>
@@ -105,11 +108,34 @@
        					<i-col span="16"></i-col>
 			      	</Row>
 		      	</div>
-		      	<div style="padding:10px;">
+		      	<div style="padding:20px;">
 		      		<i-button  type="info" @click="saveInfo" >保存</i-button>
 		      	</div>
+		      	<Divider></Divider>
 		      </Card>
 		      <Card title="日志文件" icon="md-list" :padding="0" shadow style="width: 100%;">
+		      	 <div style="padding:20px;">
+		      	 	<i-button type="info" @click="addlogBean">新建数据</i-button>
+		      	 </div>
+		      	 <div style="padding:20px;">
+		      	 	<Collapse v-for="logBean in logBeans" accordion>
+		      	 		<Row type="flex" justify="start" align="middle" :gutter="16">
+					      		<i-col span="1">实体名:</i-col>
+					      		<i-col span="3"><i-input  placeholder="" v-model="logBean.beanName" clearable></i-input></i-col>
+		       					<i-col span="1">实体描述:</i-col>
+		       					<i-col span="3"><i-input  placeholder="" v-model="logBean.beanDescribe" clearable></i-input></i-col>
+		       					<i-col span="1">基类名称:</i-col>
+		       					<i-col span="3"><i-input  placeholder="" v-model="logBean.fatherBeanName" clearable></i-input></i-col>
+		       					<i-col span="1">是否基类:</i-col>
+		       					<i-col span="3"><i-input  placeholder="" v-model="logBean.fatherBeanName" clearable></i-input></i-col>
+		       					<i-col span="1">操作:</i-col>
+		       					<i-col span="2"><i-button type="success">保存</i-button><Divider type="vertical"></Divider><i-button type="error">删除</i-button></i-col>
+					    </Row>
+					    <Panel name="logBean.beanName">
+					    	{{logBean.beanName}}
+					    </Panel>
+				   </Collapse>
+		      	 </div>
 		      </Card>
 		    </div>
 	     </transition>
@@ -122,13 +148,14 @@
 	        data: {
 	        	name: "",
 	        	isCreat:false,
-	        	dataInfo:Object
+	        	dataInfo:Object,
+	        	tmpinfoIndex:1,
+	        	logBeans:[]
 	        },
 	        mounted:function(){
 	        	var url = "/findByGameCodeMongo/"+gameCode;
 	        	_this= this;
 	        	axios.get(url).then(function(result) {
-	        		console.log(result);
 	        		reqAfterInfo(_this,result);
 	        	});
 	        },
@@ -142,27 +169,48 @@
 	            	axios.post(url,_this.dataInfo).then(function(result) {
 	            		reqAfterInfo(_this,result);
 	            	});
+	            },
+	            addlogBean: function (){
+	            	this.logBeans.push({
+	            		id: "",
+	            		logManageId: this.dataInfo.id,
+	            		beanName: "newbean"+this.tmpinfoIndex,
+	            		beanDescribe: "",
+	            		fatherBeanName: "",
+	            		isBaseBean: 0
+	                });
+	            	this.tmpinfoIndex++;
 	            }
 	        }
 	    });
 	    
+	    //主信息请求后的操作
 	    function reqAfterInfo(_this,result){
-	    	 console.log(result.data);
     		 var res=result.data;
     		 if(res.status == "0"){
     			_this.$Message.success(res.resStr);
-    			console.log(res.resDate);
     			_this.dataInfo = res.resDate;
-        		_this.dataInfo.gamecode=gameCode;
-        		_this.dataInfo.gamename='临时';
-        		logManageId=_this.dataInfo.id;
-        		if(_this.dataInfo.id==null)
+        		if(_this.dataInfo.id==null){
         			_this.isCreat=true;
-        		else
+        			_this.dataInfo.gamecode=gameCode;
+            		_this.dataInfo.gamename='临时';
+        		}
+        		else{
         			_this.isCreat=false;
+        			getLogBeanInfo(_this,_this.dataInfo.id);
+        		}
     		 }else{
     			 _this.$Message.error(res.resStr);
     		 }
+	    }
+	    
+	    function getLogBeanInfo(_this,logManageId){
+	    	var url = "/findBylogBean/"+logManageId;
+	    	axios.get(url).then(function(result) {
+        		console.log(result.data);
+        		if(result.data.id!=null)
+        			_this.logBeans.push(result.data);
+        	});
 	    }
     </script>
 </body>
