--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -108,7 +108,7 @@
 		      	 	<i-button type="info" @click="addlogBean">添加日志实体类</i-button>
 		      	 </div>
 		      	 <div style="padding:20px;">
-		      	 	<Collapse accordion v-for="logBean in logBeans">
+		      	 	<Collapse accordion v-for="logBean in logBeans" >
 		      	 		<Row type="flex" justify="start" align="middle" :gutter="16">
 					      		<i-col span="1">实体名:</i-col>
 					      		<i-col span="3"><i-input  placeholder="" v-model="logBean.beanName" clearable></i-input></i-col>
@@ -128,28 +128,26 @@
 					    </Row>
 					    <Panel name="logBean.beanName">
 					    	{{logBean.beanName}}<Divider type="vertical"></Divider> 实体id:{{logBean.id}}
-					    	<p slot="content">
+					    	<p slot="content" style="height: 500px;">
 					    		<i-button type="info" @click="addlogField(logBean.id)">添加实体字段</i-button>
-					    		<div style="padding:10px;" v-if="logFields.length">
-						    		<ul class="fieldinfo">
-						    		 	<li v-for="logField in logFields">
-						    		 		<Row type="flex" justify="start" align="middle" :gutter="16">
-						    		 			<i-col span="1">fieldid:</i-col>
-						      					<i-col span="2">{{logField.id}}</i-col>
-						      					<i-col span="1">类型:</i-col>
-						      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldType" clearable></i-input></i-col>
-						      					<i-col span="1">名称:</i-col>
-						      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldName" clearable></i-input></i-col>
-						      					<i-col span="1">大写名:</i-col>
-						      					<i-col span="2"><i-input  placeholder="" v-model="logField.bigName" clearable></i-input></i-col>
-						      					<i-col span="1">注释:</i-col>
-						      					<i-col span="2"><i-input  placeholder="" v-model="logField.comment" clearable></i-input></i-col>
-						      					<i-col span="1">操作:</i-col>
-						      					<i-col span="2"><i-button type="success" >保存</i-button><Divider type="vertical"></Divider><i-button type="error">删除</i-button></i-col>
-						    		 		</Row>
-						    		 	</li>
-						    		</ul>
-					    		</div>
+					    		<Divider orientation="left">字段内容</Divider>
+								<span v-for="logField in logFields">
+									<Row type="flex" justify="start" align="middle" :gutter="15" >
+										<i-col span="1">fieldid:</i-col>
+				      					<i-col span="2">{{logField.id}}</i-col>
+				      					<i-col span="1">类型:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldType" clearable></i-input></i-col>
+				      					<i-col span="1">名称:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldName" clearable></i-input></i-col>
+				      					<i-col span="1">大写名:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.bigName" clearable></i-input></i-col>
+				      					<i-col span="1">注释:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.comment" clearable></i-input></i-col>
+				      					<i-col span="1">操作:</i-col>
+				      					<i-col span="2"><i-button type="success" >保存</i-button><Divider type="vertical"></Divider><i-button type="error">删除</i-button></i-col>
+									</Row>
+									<br>
+								</span>
 					    	</p>
 					    </Panel>
 				   </Collapse>
