添加删除方法

--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -143,7 +143,7 @@
 				      					<i-col span="1">注释:</i-col>
 				      					<i-col span="2"><i-input  placeholder="" v-model="logField.comment" clearable></i-input></i-col>
 				      					<i-col span="1">操作:</i-col>
-				      					<i-col span="2"><i-button type="success" @click="saveLogField(logField)">保存</i-button><Divider type="vertical"></Divider><i-button type="error">删除</i-button></i-col>
+				      					<i-col span="2"><i-button type="success" @click="saveLogField(logField)">保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogField(logField)">删除</i-button></i-col>
 									</Row>
 									<br>
 								</span>
