--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -99,7 +99,7 @@
 			      	</Row>
 		      	</div>
 		      	<div style="padding:20px;">
-		      		<i-button  type="info" @click="saveInfo" >保存</i-button>
+		      		<i-button  type="info" @click="saveInfo" >保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogManager">删除</i-button>
 		      	</div>
 		      	<Divider></Divider>
 		      </Card>
